added website introduction

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Zack's website</title>
 </head>
 <body>
-  <h1>Hello world</h1>
+  <h1>hi my name is Zack</h1>
+  <h2>this is my website</h2>
 </body>
 </html>
