--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
 <body>
   <h1>hi my name is Zack</h1>
   <h2>this is my website</h2>
+  <a href="floss.svg">floss</a>
+  <a href="house.svg">house</a>
+  <a href="path_Gillam_zack_xander.svg">dancing line</a>
+  <a href="rainbow.svg">rainbow</a>
+  <a href="svg.svg">1st page on svg</a>
+  <a href="svg2.svg">2nd page on svg</a>
+  <a href="volcano.svg">volcano</a>
 </body>
 </html>
