--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <a href="house.svg">house</a>
   <a href="path_Gillam_zack_xander.svg">dancing line</a>
   <a href="rainbow.svg">rainbow</a>
-  <a href="svg.svg">1st page on svg</a>
-  <a href="svg2.svg">2nd page on svg</a>
+  <a href="svg.svg">man</a>
+  <a href="svg2.svg">man2</a>
   <a href="volcano.svg">volcano</a>
 </body>
 </html>
