--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <a href="svg.svg">man</a>
   <a href="svg2.svg">man2</a>
   <a href="volcano.svg">volcano</a>
+  <img src="https://www.google.com/search?q=sonic&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjX75ve6p3iAhUwSxUIHbzVC4kQ_AUIDigB&biw=1904&bih=920#imgrc=mpRLZ-lU-zHClM:"
 </body>
 </html>
