--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <a href="svg.svg">man</a>
   <a href="svg2.svg">man2</a>
   <a href="volcano.svg">volcano</a>
-  <img src="https://www.google.com/search?q=yoshis+crafted&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjGr5bN653iAhVeTRUIHVHrCWIQ_AUIDygC&biw=1904&bih=920#imgrc=Qf8Oxk5UMUcxKM:" />
+  <img src='https://www.google.com/search?q=yoshis+crafted&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjGr5bN653iAhVeTRUIHVHrCWIQ_AUIDygC&biw=1904&bih=920#imgrc=Qf8Oxk5UMUcxKM' />
 </body>
 </html>
