--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <a href="svg2.svg">man2</a>
   <a href="volcano.svg">volcano</a>
 <br/>
-  <img src='https://upload.wikimedia.org/wikipedia/en/thumb/3/38/Yoshi%27s_Crafted_World.jpg/220px-Yoshi%27s_Crafted_World.jpg' />
+  <img src='https://i.ytimg.com/vi/dcndZNVUxFM/maxresdefault.jpg' />
 </body>
 </html>
