--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
   <a href="volcano.svg">volcano</a>
 <br/>
   <img src='https://i.ytimg.com/vi/dcndZNVUxFM/maxresdefault.jpg' />
+  <br/>
+  <img src='https://thumbs.dreamstime.com/z/dabbing-cartoon-chicken-rooster-dabbing-cartoon-chicken-vector-clip-art-illustration-simple-gradients-all-single-112580909.jpg'
 </body>
 </html>
