--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <br/>
   <img src='https://i.ytimg.com/vi/dcndZNVUxFM/maxresdefault.jpg' />
   <br/>
+  <p>scroll down</p>
   <img src='https://thumbs.dreamstime.com/z/dabbing-cartoon-chicken-rooster-dabbing-cartoon-chicken-vector-clip-art-illustration-simple-gradients-all-single-112580909.jpg'
 </body>
 </html>
