chiking and index got new stuff

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <p>scroll more</p>
   <img src='https://ih0.redbubble.net/image.459378481.4807/flat,550x550,075,f.u3.jpg'
 <br/>
+<p>scroll more</p>
 
-  <a href="xander.gillams.co.uk">my brothers website</a>
+<img src='https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/pokemon-detective-pikachu-1-1552650378.jpg?crop=0.411xw:0.988xh;0.355xw,0.00833xh&resize=480:*'
+  <a href="https://xander.gillams.co.uk">my brothers website</a>
 </body>
 </html>
