--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <a href="svg.svg">man</a>
   <a href="svg2.svg">man2</a>
   <a href="volcano.svg">volcano</a>
+  <a href="chiking.svg">chicken</a>
 <br/>
   <img src='https://i.ytimg.com/vi/dcndZNVUxFM/maxresdefault.jpg' />
   <br/>
