--- a/school1960.html
+++ b/school1960.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
-  </head>
-  <title>school in the 1960s</title>
-  <body>
+</head>
+<title>school in the 1960s</title>
+
+<body>
 
     <h1>School in the 1960s</h1>
 
@@ -13,11 +15,57 @@
     <h2>bad behaviour</h2>
 
     <blockquote>
-    "The headmaster had a cane, he would cane people's bottoms if they were naughty [...], another teacher used to throw a chalkboard rubber at pupils if they were misbehaving in class" -- Grandad Gillam
+        "The headmaster had a cane, he would cane people's bottoms if they were naughty [...], another teacher used to throw a chalkboard rubber at pupils if they were misbehaving in class." -- Grandad Gillam
     </blockquote>
 
     <p>2019 is different to the 1960s because in 2019 if you were naughty you would be told off and put on time out but in the 1960s you would get hurt.</p>
 
+    <h2>subjects</h2>
 
-  </body>
+    <blockquote>
+        "Maths, english, geography, physiscs, physical education, technical drawing, art, general science, woodwork, religious knowledge, history, economics" -- Grandad Gillam
+    </blockquote>
+
+    <p>In the 1960s they lernd the same exeped PSHE.</p>
+
+    <h2>assembly</h2>
+
+    <blockquote>
+        "In secondary school you went into assembly and you stood with [...] the whole school [...]. The teachers and the headmaster would be up at the front and we'd sing a few hymns and say a prayer and then we'd go off to lessons." -- Grandad Gillam
+    </blockquote>
+
+    <p></p>
+
+    <h2></h2>
+
+    <blockquote>
+
+    </blockquote>
+    
+    <p></p>
+
+    <h2></h2>
+
+    <blockquote>
+
+    </blockquote>
+    <p></p>
+
+    <h2></h2>
+
+    <blockquote>
+
+    </blockquote>
+    <p></p>
+
+    <h2></h2>
+
+    <blockquote>
+
+    </blockquote>
+
+    <p></p>
+
+</body>
+
 </html>
