--- a/school1960.html
+++ b/school1960.html
@@ -12,6 +12,9 @@
 
     <p>To lern about the 1960s I asked my grandad what it was like in school in the 1960s.</p>
 
+    <div style="float: right">
+      <img src="https://futuresecuredfinancial.com/uploads/3/4/9/1/34911248/teacher-with-a-ruler.jpg?250" />
+    </div>
     <h2>bad behaviour</h2>
 
     <blockquote>
@@ -34,37 +37,50 @@
         "In secondary school you went into assembly and you stood with [...] the whole school [...]. The teachers and the headmaster would be up at the front and we'd sing a few hymns and say a prayer and then we'd go off to lessons." -- Grandad Gillam
     </blockquote>
 
-    <p></p>
+    <p>That is the same exeped they did not sit down and we do not do a prayer and we sing pop songs and they sing hymn songs.</p>
 
-    <h2></h2>
-
-    <blockquote>
-
-    </blockquote>
-    
-    <p></p>
-
-    <h2></h2>
+    <h2>Break</h2>
 
     <blockquote>
-
-    </blockquote>
-    <p></p>
-
-    <h2></h2>
-
-    <blockquote>
-
-    </blockquote>
-    <p></p>
-
-    <h2></h2>
-
-    <blockquote>
+      "In my younger days at secondary school we actually had a 'milk break' in the morning. Half way through the morning we'd all stop and have a small bottle of milk that was given to us. But they cut that out later on because it was too expensive." -- Grandad Gillam
 
     </blockquote>
 
-    <p></p>
+    <p>They drank milk but we played outside.</p>
+
+    <hr />
+
+    <h1>Other things we learned</h1>
+    <p><em>This section and the quotes above were typed by Zack's Dad.</em></p>
+
+    <h2>School trips</h2>
+
+    <p>Grandad went on school trips like I have.</p>
+
+    <h2>Uniform</h2>
+
+    <p>It's the same because we both had uniform, but it's different because Grandad had a different uniform to us</p>
+
+    <h2>Class size</h2>
+
+    <blockquote>"We didn't have any teaching assistants, we just had one teacher" -- Grandad Gillam</blockquote>
+
+    <p>It's different because I mostly have four teachers but Grandad <em>only</em> had one teacher.</p>
+
+    <div style="float: right">
+      <img src="https://www.computerhope.com/jargon/s/slide-rule-adj.jpg" />
+    </div>
+    <h2>What did you have instead of computers?</h2>
+
+    <blockquote>
+      "We didn't have calculators, computers, any electronic gizmos like that; we had pencils, paper, log books (for working out maths and stuff like that) and a slide rule which is like a ruler inside of another ruler that you can slide up and down and line things up to give you answers to questions" -- Grandad Gillam
+
+    </blockquote>
+
+    <h2>Writing</h2>
+
+    <p>At school I write with pencils and green pens, but Grandad used quills and fountain pens and cartridge pens.</p>
+
 
 </body>
 
