--- a/school1960.html
+++ b/school1960.html
@@ -3,10 +3,13 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://sindresorhus.com/github-markdown-css/github-markdown.css"/>
+
+
 </head>
 <title>school in the 1960s</title>
 
-<body>
+<body class="markdown-body">
 
     <h1>School in the 1960s</h1>
 
