Add link to school1960.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
   <h1>hi my name is Zack</h1>
   <h2>this is my website</h2>
+  <a href="school1960.html">School in the 1960s</a>
   <a href="floss.svg">floss</a>
   <a href="house.svg">house</a>
   <a href="path_Gillam_zack_xander.svg">dancing line</a>
