--- a/index.html
+++ b/index.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Zack's website</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-</head>
-<body>
-  <h1>hi my name is Zack</h1>
-  <h2>this is my website</h2>
-  <a href="school1960.html">School in the 1960s</a>
-  <a href="floss.svg">floss</a>
-  <a href="house.svg">house</a>
-  <a href="path_Gillam_zack_xander.svg">dancing line</a>
-  <a href="rainbow.svg">rainbow</a>
-  <a href="svg.svg">man</a>
-  <a href="svg2.svg">man2</a>
-  <a href="volcano.svg">volcano</a>
-  <a href="chiking.svg">chicken</a>
-<br/>
-  <img src='https://i.ytimg.com/vi/dcndZNVUxFM/maxresdefault.jpg' />
-  <br/>
-  <p>scroll down</p>
-  <img src='https://thumbs.dreamstime.com/z/dabbing-cartoon-chicken-rooster-dabbing-cartoon-chicken-vector-clip-art-illustration-simple-gradients-all-single-112580909.jpg'
-  <br/>
-  <p>scroll more</p>
-  <img src='https://ih0.redbubble.net/image.459378481.4807/flat,550x550,075,f.u3.jpg'
-<br/>
-<p>scroll more</p>
+  <head>
+    <title>Zack's website</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+  </head>
+  <body>
+    <h1>hi my name is Zack</h1>
+    <h2>this is my website</h2>
+    <a href="school1960.html">School in the 1960s</a>
+    <a href="floss.svg">floss</a>
+    <a href="house.svg">house</a>
+    <a href="path_Gillam_zack_xander.svg">dancing line</a>
+    <a href="rainbow.svg">rainbow</a>
+    <a href="svg.svg">man</a>
+    <a href="svg2.svg">man2</a>
+    <a href="volcano.svg">volcano</a>
+    <a href="chiking.svg">chicken</a>
+    <a href="zacks inkscape testing.svg"
+      >I tested inkscape... <br />
+      CHICKEN!!!!</a
+    >
+    <br />
+    <img src="https://i.ytimg.com/vi/dcndZNVUxFM/maxresdefault.jpg" />
+    <br />
+    <p>scroll down</p>
+    <img
+      src="https://thumbs.dreamstime.com/z/dabbing-cartoon-chicken-rooster-dabbing-cartoon-chicken-vector-clip-art-illustration-simple-gradients-all-single-112580909.jpg"
+      <br
+    />
+    <p>scroll more</p>
+    <img
+      src="https://ih0.redbubble.net/image.459378481.4807/flat,550x550,075,f.u3.jpg"
+      <br
+    />
+    <p>scroll more</p>
 
-<img src='https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/pokemon-detective-pikachu-1-1552650378.jpg?crop=0.411xw:0.988xh;0.355xw,0.00833xh&resize=480:*'
-<br/>
-  <a href="https://xander.gillams.co.uk">my brothers website</a>
-</body>
+    <img
+      src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/pokemon-detective-pikachu-1-1552650378.jpg?crop=0.411xw:0.988xh;0.355xw,0.00833xh&resize=480:*"
+      <br
+    />
+    <a href="https://xander.gillams.co.uk">my brothers website</a>
+  </body>
 </html>
