--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="svg2.svg">man2</a>
     <a href="volcano.svg">volcano</a>
     <a href="chiking.svg">chicken</a>
+    <a href="zackblox.html">zackblox</a>
     <a href="zacks inkscape testing.svg"
       >I tested inkscape... <br />
       CHICKEN!!!!</a
