--- a/zackblox.html
+++ b/zackblox.html
@@ -11,7 +11,7 @@
     <div class="Header">
       <div class="headerrow gray">
         <div>📋</div>
-        <div>Z</div>
+        <div><img src="zackbloxlogo.png" height="20" width="20" /></div>
         <div class="searchbox">
           <div class="search">
             <div>🔎</div>
@@ -28,6 +28,68 @@
         <div>Avatar Shop</div>
         <div>Create</div>
         <div>ZackBux</div>
+      </div>
+    </div>
+    <div class="me">
+      <div class="avatar">
+        <img src="http://placekitten.com/150/150" alt="" />
+      </div>
+      <div><input class="username" type="text" value="BlueBouncyBuddy" /></div>
+    </div>
+    <div>
+      <div class="titlerow">
+        <div class="titlerowtop">Friends (8)</div>
+        <div class="titlerowbottom">see all</div>
+      </div>
+      <div class="friends">
+        <div class="card">
+          <div class="cardavatar">
+            <img src="http://placekitten.com/80/80" alt="" />
+          </div>
+          <div class="cardname">cutekitten</div>
+        </div>
+        <div class="card">
+          <div class="cardavatar">
+            <img src="http://placekitten.com/80/80" alt="" />
+          </div>
+          <div class="cardname">cutekitten</div>
+        </div>
+        <div class="card">
+          <div class="cardavatar">
+            <img src="http://placekitten.com/80/80" alt="" />
+          </div>
+          <div class="cardname">cutekitten</div>
+        </div>
+        <div class="card">
+          <div class="cardavatar">
+            <img src="http://placekitten.com/80/80" alt="" />
+          </div>
+          <div class="cardname">cutekitten</div>
+        </div>
+        <div class="card">
+          <div class="cardavatar">
+            <img src="http://placekitten.com/80/80" alt="" />
+          </div>
+          <div class="cardname">cutekitten</div>
+        </div>
+        <div class="card">
+          <div class="cardavatar">
+            <img src="http://placekitten.com/80/80" alt="" />
+          </div>
+          <div class="cardname">cutekitten</div>
+        </div>
+        <div class="card">
+          <div class="cardavatar">
+            <img src="http://placekitten.com/80/80" alt="" />
+          </div>
+          <div class="cardname">cutekitten</div>
+        </div>
+        <div class="card">
+          <div class="cardavatar">
+            <img src="http://placekitten.com/80/80" alt="" />
+          </div>
+          <div class="cardname">cutekitten</div>
+        </div>
       </div>
     </div>
   </body>
