--- a/zackblox.html
+++ b/zackblox.html
@@ -30,67 +30,116 @@
         <div>ZackBux</div>
       </div>
     </div>
-    <div class="me">
-      <div class="avatar">
-        <img src="http://placekitten.com/150/150" alt="" />
-      </div>
-      <div><input class="username" type="text" value="BlueBouncyBuddy" /></div>
-    </div>
-    <div>
-      <div class="titlerow">
-        <div class="titlerowtop">Friends (8)</div>
-        <div class="titlerowbottom">see all</div>
-      </div>
-      <div class="friends">
-        <div class="card">
-          <div class="cardavatar">
-            <img src="http://placekitten.com/80/80" alt="" />
-          </div>
-          <div class="cardname">cutekitten</div>
+    <section class="home">
+      <div class="me">
+        <div class="avatar">
+          <img src="http://placekitten.com/150/150" alt="" />
         </div>
-        <div class="card">
-          <div class="cardavatar">
-            <img src="http://placekitten.com/80/80" alt="" />
-          </div>
-          <div class="cardname">cutekitten</div>
-        </div>
-        <div class="card">
-          <div class="cardavatar">
-            <img src="http://placekitten.com/80/80" alt="" />
-          </div>
-          <div class="cardname">cutekitten</div>
-        </div>
-        <div class="card">
-          <div class="cardavatar">
-            <img src="http://placekitten.com/80/80" alt="" />
-          </div>
-          <div class="cardname">cutekitten</div>
-        </div>
-        <div class="card">
-          <div class="cardavatar">
-            <img src="http://placekitten.com/80/80" alt="" />
-          </div>
-          <div class="cardname">cutekitten</div>
-        </div>
-        <div class="card">
-          <div class="cardavatar">
-            <img src="http://placekitten.com/80/80" alt="" />
-          </div>
-          <div class="cardname">cutekitten</div>
-        </div>
-        <div class="card">
-          <div class="cardavatar">
-            <img src="http://placekitten.com/80/80" alt="" />
-          </div>
-          <div class="cardname">cutekitten</div>
-        </div>
-        <div class="card">
-          <div class="cardavatar">
-            <img src="http://placekitten.com/80/80" alt="" />
-          </div>
-          <div class="cardname">cutekitten</div>
+        <div>
+          <input class="username" type="text" value="BlueBouncyBuddy" />
         </div>
       </div>
-    </div>
+      <div>
+        <div class="titlerow">
+          <div class="titlerowtop">Friends (8)</div>
+          <div class="titlerowbottom">see all<span class="→">→</span></div>
+        </div>
+
+        <div class="friends">
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">cutekitten</div>
+          </div>
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">cutekitten</div>
+          </div>
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">cutekitten</div>
+          </div>
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">cutekitten</div>
+          </div>
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">cutekitten</div>
+          </div>
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">cutekitten</div>
+          </div>
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">cutekitten</div>
+          </div>
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">cutekitten</div>
+          </div>
+        </div>
+
+        <div class="titlerow">
+          <div class="titlerowtop">games!</div>
+          <div class="titlerowbottom">see all<span class="→">→</span></div>
+        </div>
+        <div class="friends">
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">cutekitten</div>
+          </div>
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">cutekitten</div>
+          </div>
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">cutekitten</div>
+          </div>
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">cutekitten</div>
+          </div>
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">cutekitten</div>
+          </div>
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">tower defence simulator</div>
+          </div>
+ </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
