--- a/zackblox.html
+++ b/zackblox.html
@@ -80,19 +80,19 @@
             <div class="cardavatar">
               <img src="http://placekitten.com/80/80" alt="" />
             </div>
-            <div class="cardname">cutekitten</div>
+            <div class="cardname">jadyn2901</div>
           </div>
           <div class="card">
             <div class="cardavatar">
               <img src="http://placekitten.com/80/80" alt="" />
             </div>
-            <div class="cardname">cutekitten</div>
+            <div class="cardname">blondie bird</div>
           </div>
           <div class="card">
             <div class="cardavatar">
               <img src="http://placekitten.com/80/80" alt="" />
             </div>
-            <div class="cardname">cutekitten</div>
+            <div class="cardname">bousy rouge</div>
           </div>
         </div>
 
@@ -100,44 +100,120 @@
           <div class="titlerowtop">games!</div>
           <div class="titlerowbottom">see all<span class="→">→</span></div>
         </div>
-        <div class="friends">
+
+        <div class="games">
           <div class="card">
             <div class="cardavatar">
               <img src="http://placekitten.com/80/80" alt="" />
             </div>
-            <div class="cardname">cutekitten</div>
+            <div class="cardname">sonic obby</div>
+            <div class="feedback">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Facebook_Thumb_icon.svg/220px-Facebook_Thumb_icon.svg.png"
+                alt=""
+              />
+              83.7%
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/YouTube_Diamond_Play_Button.png/1200px-YouTube_Diamond_Play_Button.png"
+                alt=""
+              />
+              90.7%
+            </div>
           </div>
           <div class="card">
             <div class="cardavatar">
               <img src="http://placekitten.com/80/80" alt="" />
             </div>
-            <div class="cardname">cutekitten</div>
+            <div class="cardname">brookhaven</div>
+            <div class="feedback">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Facebook_Thumb_icon.svg/220px-Facebook_Thumb_icon.svg.png"
+                alt=""
+              />
+              83.7%
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/YouTube_Diamond_Play_Button.png/1200px-YouTube_Diamond_Play_Button.png"
+                alt=""
+              />
+              90.7%
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="cardavatar">
+              <img src="http://placekitten.com/80/80" alt="" />
+            </div>
+            <div class="cardname">imposible obby</div>
+            <div class="feedback">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Facebook_Thumb_icon.svg/220px-Facebook_Thumb_icon.svg.png"
+                alt=""
+              />
+              83.7%
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/YouTube_Diamond_Play_Button.png/1200px-YouTube_Diamond_Play_Button.png"
+                alt=""
+              />
+              90.7%
+            </div>
           </div>
           <div class="card">
             <div class="cardavatar">
               <img src="http://placekitten.com/80/80" alt="" />
             </div>
-            <div class="cardname">cutekitten</div>
+            <div class="cardname">pet simulator</div>
+            <div class="feedback">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Facebook_Thumb_icon.svg/220px-Facebook_Thumb_icon.svg.png"
+                alt=""
+              />
+              83.7%
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/YouTube_Diamond_Play_Button.png/1200px-YouTube_Diamond_Play_Button.png"
+                alt=""
+              />
+              90.7%
+            </div>
           </div>
           <div class="card">
             <div class="cardavatar">
               <img src="http://placekitten.com/80/80" alt="" />
             </div>
-            <div class="cardname">cutekitten</div>
-          </div>
-          <div class="card">
-            <div class="cardavatar">
-              <img src="http://placekitten.com/80/80" alt="" />
+            <div class="cardname">funky friday</div>
+            <div class="feedback">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Facebook_Thumb_icon.svg/220px-Facebook_Thumb_icon.svg.png"
+                alt=""
+              />
+              83.7%
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/YouTube_Diamond_Play_Button.png/1200px-YouTube_Diamond_Play_Button.png"
+                alt=""
+              />
+              90.7%
             </div>
-            <div class="cardname">cutekitten</div>
           </div>
           <div class="card">
             <div class="cardavatar">
-              <img src="http://placekitten.com/80/80" alt="" />
+              <img
+                src="https://ih0.redbubble.net/image.459378481.4807/flat,550x550,075,f.u3.jpg"
+                alt=""
+              />
             </div>
             <div class="cardname">tower defence simulator</div>
+            <div class="feedback">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Facebook_Thumb_icon.svg/220px-Facebook_Thumb_icon.svg.png"
+                alt=""
+              />
+              83.7%
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/YouTube_Diamond_Play_Button.png/1200px-YouTube_Diamond_Play_Button.png"
+                alt=""
+              />
+              90.7%
+            </div>
           </div>
- </div>
         </div>
       </div>
     </section>
