--- a/editor.html
+++ b/editor.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      html,
+      body {
+        border: 0;
+        padding: 0;
+        margin: 0;
+        outline: 0;
+        overflow: hidden;
+      }
+      div {
+        overflow: auto;
+        min-height: 100vh;
+        padding: 1rem;
+      }
+    </style>
   </head>
   <body>
-    <div contenteditable="true">ukdfgh</div>
+    <div contenteditable="true">type here</div>
   </body>
 </html>
