--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       >I tested inkscape... <br />
       CHICKEN!!!!</a
     >
+    <a href="editor.html">zack docs</a>
     <br />
     <img src="https://i.ytimg.com/vi/dcndZNVUxFM/maxresdefault.jpg" />
     <br />
