--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
       src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/pokemon-detective-pikachu-1-1552650378.jpg?crop=0.411xw:0.988xh;0.355xw,0.00833xh&resize=480:*"
       <br
     />
-    <a href="https://xander.gillams.co.uk">my brothers website</a>
+    <a href="https://xander.thegillams.co.uk">my brothers website</a>
   </body>
 </html>
