--- a/make_a_story.html
+++ b/make_a_story.html
@@ -19,8 +19,17 @@
       </h1>
       <p>
         At the crack of dawn,<span class="name">name</span> was already
-        <span class="verbofspeed"></span> across the Arctic ocean and he was
-        exited to see his new friends.
+        <span class="verbofspeed"></span> across the Arctic ocean and they were
+        exited to see their new friends. However they were still
+        <span class="sadadj">sad</span>
+        that they were leaving their family behind in antartica.
+      </p>
+      <p>
+        Suddenly, the tides sped up and they were
+        <span class="tobebrung"></span> towards the edge of the Republic of
+        South Africa . They <span class="movment">walked</span> around for a
+        while and found a jungle with a lion in it.Soon after, they swam with
+        exotic fish , ran up a hill and eat lunch with the lion.
       </p>
     </div>
     <script>
@@ -37,6 +46,9 @@
       word("enter an animal", ".animal");
       word("enter an adjective for adventure", ".adjective");
       word("enter a verb of speed ending in -ing", ".verbofspeed");
+      word("enter a sad adjective", ".sadadj");
+      word("enter a word that means to be swept off corse", ".tobebrung");
+      word("enter a verb of movement", "movment");
 
       story.style.display = "block";
     </script>
