--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       CHICKEN!!!!</a
     >
     <a href="editor.html">zack docs</a>
+    <a href="make_a_story.html">make your story</a>
     <br />
     <img src="https://i.ytimg.com/vi/dcndZNVUxFM/maxresdefault.jpg" />
     <br />
