--- a/make_a_story.html
+++ b/make_a_story.html
@@ -28,8 +28,42 @@
         Suddenly, the tides sped up and they were
         <span class="tobebrung"></span> towards the edge of the Republic of
         South Africa . They <span class="movment">walked</span> around for a
-        while and found a jungle with a lion in it.Soon after, they swam with
-        exotic fish , ran up a hill and eat lunch with the lion.
+        while and found a jungle with a
+        <span class="jungle_animal">lion</span> in it.Soon after, they swam with
+        exotic fish , ran up a hill and eat lunch with the
+        <span class="jungle_animal">lion </span>.He said good bye to the
+        <span class="jungle_animal">lion</span> and dived back in the cool
+        water.
+      </p>
+
+      <p>
+        Later, they got tiered and they were near Saudi Arabia. So they swam as
+        fast as they could to the countoury so he could rest. As he aproched
+        land , he saw some <span class="desert_animal">camal</span> drinking at
+        the oasis and he asked one their name and they replyed "charlie".
+        Afterwards, <span class="name">pat</span> road the
+        <span class="desert_animal">camel</span>, had a drink of oasis water and
+        poked a pricaly cactus. Then, <span class="name">pat</span>shouted bye
+        to charlie and <span class="verbofspeed"></span> off into the ocean.
+      </p>
+
+      <p>
+        Later on,he saw the famous Niagara Falls
+        <span class="name"></span> wondered if they could swim up it so
+        <span class="name"></span> tried and tried agian but he just couldn't do
+        it so he looked for a friend instead. Soon, he found a friend
+        <span class="jungleanimal"></span> hunted with it ,climbed trees, and
+        raced the <span class="jungleanimal"></span> . Afterwards,
+        <span class="name"></span> leaped off back into the water and
+        <span class="verbofspeed"></span> off.
+      </p>
+
+      <p>
+        At last, <span class="name"></span> had arrived at
+        <span class="city_by_the_ocean"></span> bay
+        <span class="name"></span> climbed on and
+        <span class="movment">walked</span> as fast as they could to get to
+        <span class="school">newlands</span> to meet his new friends.
       </p>
     </div>
     <script>
@@ -49,6 +83,14 @@
       word("enter a sad adjective", ".sadadj");
       word("enter a word that means to be swept off corse", ".tobebrung");
       word("enter a verb of movement", "movment");
+      word("enter a animal that lives in a jungle", ".jungle_animal");
+      word(
+        "enter a pural of a animal that lives in the desert",
+        ".desert_animal"
+      );
+      word("enter a new animal that lives in a jungle", ".jungleanimal");
+      word("enter a city by the ocean", "city_by_the_ocean");
+      word("enter a school (include prymary or secondary)", ".school");
 
       story.style.display = "block";
     </script>
