--- a/make_a_story.html
+++ b/make_a_story.html
@@ -30,7 +30,7 @@
         South Africa . They <span class="movment">walked</span> around for a
         while and found a jungle with a
         <span class="jungle_animal">lion</span> in it.Soon after, they swam with
-        exotic fish , ran up a hill and eat lunch with the
+        exotic fish , ran up a hill and ate lunch with the
         <span class="jungle_animal">lion </span>.He said good bye to the
         <span class="jungle_animal">lion</span> and dived back in the cool
         water.
@@ -43,7 +43,7 @@
         the oasis and he asked one their name and they replyed "charlie".
         Afterwards, <span class="name">pat</span> road the
         <span class="desert_animal">camel</span>, had a drink of oasis water and
-        poked a pricaly cactus. Then, <span class="name">pat</span>shouted bye
+        poked a pricaly cactus. Then, <span class="name">pat</span> shouted bye
         to charlie and <span class="verbofspeed"></span> off into the ocean.
       </p>
 
