--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     >
     <a href="editor.html">zack docs</a>
     <a href="make_a_story.html">make your story</a>
+    <a href="make_a_story_2.html"></a>
     <br />
     <img src="https://i.ytimg.com/vi/dcndZNVUxFM/maxresdefault.jpg" />
     <br />
