--- a/index.html
+++ b/index.html
@@ -26,26 +26,27 @@
     >
     <a href="editor.html">zack docs</a>
     <a href="make_a_story.html">make your story</a>
-    <a href="make_a_story_2.html"></a>
+    <a href="make_a_story_2.html">make your story 2 </a>
     <br />
     <img src="https://i.ytimg.com/vi/dcndZNVUxFM/maxresdefault.jpg" />
     <br />
     <p>scroll down</p>
     <img
       src="https://thumbs.dreamstime.com/z/dabbing-cartoon-chicken-rooster-dabbing-cartoon-chicken-vector-clip-art-illustration-simple-gradients-all-single-112580909.jpg"
-      <br
     />
+    <br />
     <p>scroll more</p>
     <img
       src="https://ih0.redbubble.net/image.459378481.4807/flat,550x550,075,f.u3.jpg"
-      <br
     />
+    <br />
+
     <p>scroll more</p>
 
     <img
       src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/pokemon-detective-pikachu-1-1552650378.jpg?crop=0.411xw:0.988xh;0.355xw,0.00833xh&resize=480:*"
-      <br
     />
+    <br />
     <a href="https://xander.thegillams.co.uk">my brothers website</a>
   </body>
 </html>
