--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <a href="editor.html">zack docs</a>
     <a href="make_a_story.html">make your story</a>
     <a href="make_a_story_2.html">make your story 2 </a>
+    <a href="queen_game.html">jublee board game reamade with <code></code></a>
     <br />
     <img src="https://i.ytimg.com/vi/dcndZNVUxFM/maxresdefault.jpg" />
     <br />
