turret dont be fireing

--- a/pvz.html
+++ b/pvz.html
@@ -15,6 +15,7 @@
       <div class="lane"></div>
       <div class="lane"></div>
     </div>
+    <div>CatCoin: <span id="credits">0</span></div>
     <script src="pvz.js"></script>
   </body>
 </html>
