--- a/pvz.html
+++ b/pvz.html
@@ -16,6 +16,7 @@
       <div class="lane"></div>
     </div>
     <div>CatCoin: <span id="credits">0</span></div>
+    <div id="popup"></div>
     <script src="pvz.js"></script>
   </body>
 </html>
