--- a/pvz.html
+++ b/pvz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pants vs zombies yooo</title>
+    <title>turrets vs zombies yooo</title>
     <link rel="stylesheet" href="pvz.css" />
   </head>
   <body>
