--- a/make_a_story_2.html
+++ b/make_a_story_2.html
@@ -59,7 +59,7 @@
       word("make up a tiny village", ".tiny_village");
       word("enter a town name", ".town_name");
       word("enter a adjective for sad", ".happy");
-      word("enter a synynom for worriing", "worring");
+      word("enter a synynom for worrying", "worring");
       word("enter an evil charachter", "evil_character");
       word("enter a main character(a boy)", ".main");
       word("enter a sister for the main character");
