--- a/zackblox.html
+++ b/zackblox.html
@@ -92,7 +92,7 @@
             <div class="cardavatar">
               <img src="http://placekitten.com/80/80" alt="" />
             </div>
-            <div class="cardname">bousy rouge</div>
+            <div class="cardname">bouzy rouge</div>
           </div>
         </div>
 
