split codebase up

--- a/pvz/index.html
+++ b/pvz/index.html
@@ -17,6 +17,6 @@
     </div>
     <div>CatCoin: <span id="credits">0</span></div>
     <div id="popup"></div>
-    <script src="pvz.js"></script>
+    <script src="pvz.js" type="module"></script>
   </body>
 </html>
